--- a/Schema/ansible.cfg
+++ b/Schema/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
 hash_behaviour=merge
 log_path=/var/log/messages
+#enable_task_debugger = True
+collections_enabled = community.general
+
