--- a/Schema/mrchostsrbacdata.yml
+++ b/Schema/mrchostsrbacdata.yml
@@ -63,6 +63,7 @@ all:
     kafka_connect_cluster_name: tenantcluster
     ksql_cluster_name: tenantcluster-connect
     #secrets_protection_enabled: true
+    #regenerate_master_key: false
     confluent_cli_download_enabled: false   
     #secrets_protection_masterkey: abC12DE+3fG45Hi67J8KlmnOpQr9s0Tuv+w1x2y3zab=
     #rbac_component_additional_system_admins: [ user1 ]
