--- a/Schema/mrchostsrbacmetric.yml
+++ b/Schema/mrchostsrbacmetric.yml
@@ -32,6 +32,7 @@ all:
     jmxexporter_jar_url: /home/ubuntu/jmx_prometheus_javaagent-0.12.0.jar  
     rbac_enabled: true
     #secrets_protection_enabled: true
+    #regenerate_master_key: false
     kafka_broker_cluster_name: metriccluster
     schema_registry_cluster_name: metriccluster-sr
     #Schema registry cluster id always defaulted to 'schema-registry' 
