--- a/Schema/ansible.cfg
+++ b/Schema/ansible.cfg
@@ -1,6 +1,12 @@
 [defaults]
 hash_behaviour=merge
-log_path=/var/log/messages
+#log_path=/var/log/messages
+log_path=/home/ubuntu/Ansible/Schema/ansible-logs.txt
 #enable_task_debugger = True
 collections_enabled = community.general
+#callback_enabled = task_info
+#callback_enabled = custom_logger`:wq::
+#callback_plugins = /home/ubuntu/Ansible/Schema/callbacks 
+#callback_plugins = /home/ubuntu/Ansible/Schema
+#stdout_callback = task_info
 
